src/test/ui/resolve/issue-18252.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct variant `Foo::Variant`
  --> $DIR/issue-18252.rs:6:13
   |
LL |     Variant { x: usize }
   |     -------------------- `Foo::Variant` defined here
...
LL |     let f = Foo::Variant(42);
   |             ^^^^^^^^^^^^^^^^ help: use struct literal syntax instead: `Foo::Variant { x: val }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
